--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
      </a>
       <a>
        <span class="menu">Explore</span>
-       <ul class="submenu">
-         <li>Partnerships</li>
-         <li>Business</li>
-         <li>Cities</li>
-         <li>Airports</li>
-       </ul>
       </a>
       <a href="https://help.lyft.com/hc/en-ca">
        <span class="menu">Help</span>
@@ -70,17 +64,17 @@
 
  <article class="header">
      <div class="text">
-       <h3>A RIDE IN MINUTES</h3>
+       <h3>A RIDE IN MINUTES</h3><br/>
        <p>Request a ride and you’ll be on your way in minutes.</p>
-       <p>Request. Ride. Repeat.</p><br/>
+       <p>Request. Ride. Repeat.</p><br/><br/>
 
 
-         <h3>SERIOUS ABOUT SAFETY</h3>
+        <h3>SERIOUS ABOUT SAFETY</h3><br/>
        <p>From knowing the color of your driver’s car to our 24/7</p>
-       <p>Trust & Safety Team, we got you.</p><br/>
+       <p>Trust & Safety Team, we got you.</p><br/><br/>
 
        <h3>HAPPY DRIVERS.</h3>
-       <h3>HAPPY RIDERS.</h3>
+       <h3>HAPPY RIDERS.</h3><br/>
        <p>Ride with us and you’ll see why 9 out of 10 rides end with</p>
        <p> five stars.</p>
 
