--- a/index.html
+++ b/index.html
@@ -11,184 +11,163 @@
   </head>
 
   <body>
-
-    <nav>
-
-      <a id="lyft"
-       href="#head">
-       <img src="assets/images/logo-white.png" width="60" height="50">
-      </a>
-      <a href="https://www.lyft.com/conduce-con-lyft">
-       <span class="menu">Drive</span>
-     </a>
-      <a>
-       <span class="menu">Explore</span>
-      </a>
-      <a href="https://help.lyft.com/hc/en-ca">
-       <span class="menu">Help</span>
-      </a>
-      <a href="https://account.lyft.com/auth?next=https%3A%2F%2Fwww.lyft.com%2Flogin%2Fjump">
-       <span class="menu" id="log">Log in</span>
-      </a>
-    </nav>
-
+   <!-- creating the nav -->
+  <nav>
+    <a id="lyft"
+      href="#head">
+     <img src="assets/images/logo-white.png" width="60" height="50">
+    </a>
+    <a href="https://www.lyft.com/conduce-con-lyft">
+     <span class="menu">Drive</span>
+    </a>
+    <a>
+      <span class="menu">Explore</span>
+    </a>
+    <a href="https://help.lyft.com/hc/en-ca">
+      <span class="menu">Help</span>
+    </a>
+    <a href="https://account.lyft.com/auth?next=https%3A%2F%2Fwww.lyft.com%2Flogin%2Fjump">
+      <span class="menu" id="log">Log in</span>
+    </a>
+  </nav>
 
 
-    <header id="head">
-
-      <div class="img">
-
-      <div class="input">
-    <h1>TURN MILES<br/>
-       INTO MONEY</h1>
-    <h4>SIGN UP TO DRIVE WITH LYFT</h4>
-    <label for="name">Phone Number</label><br/>
-    <input id="name" type="text" size="50"><br/>
-    <div class="buttom">Become a Driver</div>
-    <div class="buttom">Sign Up to Ride</div>
-    <p>Already applied? <a class="links"
-      href="https://account.lyft.com/auth?next=https%3A%2F%2Fwww.lyft.com%2Fdrivers%2Fapply%2Fresume">
-      Check the status of your application here.</a></p>
-    <p>Get ride credit for inviting friends.
-      <a class="links"
-      href="https://account.lyft.com/auth?next=https%3A%2F%2Fwww.lyft.com%2Fdrive%2Freferrals">
-       Learn more</a></p>
-
-      </div>
-
-    </header>
-    <div id="image">
-    <img src="assets/images/phone.png" width="500" height="500">
-  </div>
-
-
- <article class="header">
-     <div class="text">
-       <h3>A RIDE IN MINUTES</h3><br/>
-       <p>Request a ride and you’ll be on your way in minutes.</p>
-       <p>Request. Ride. Repeat.</p><br/><br/>
-
-
-        <h3>SERIOUS ABOUT SAFETY</h3><br/>
-       <p>From knowing the color of your driver’s car to our 24/7</p>
-       <p>Trust & Safety Team, we got you.</p><br/><br/>
-
-       <h3>HAPPY DRIVERS.</h3>
-       <h3>HAPPY RIDERS.</h3><br/>
-       <p>Ride with us and you’ll see why 9 out of 10 rides end with</p>
-       <p> five stars.</p>
-
+<!-- creating the head -->
+  <header id="head">
+   <div class="img">
+     <div class="input">
+       <h1>TURN MILES<br/>
+           INTO MONEY</h1>
+       <h4>SIGN UP TO DRIVE WITH LYFT</h4>
+       <label for="name">Phone Number</label><br/>
+        <input id="name" type="text" size="50"><br/>
+       <div class="buttom">Become a Driver</div>
+       <div class="buttom">Sign Up to Ride</div>
+       <p>Already applied? <a class="links"
+        href="https://account.lyft.com/auth?next=https%3A%2F%2Fwww.lyft.com%2Fdrivers%2Fapply%2Fresume">
+        Check the status of your application here.</a>
+       </p>
+       <p>Get ride credit for inviting friends.
+         <a class="links"
+          href="https://account.lyft.com/auth?next=https%3A%2F%2Fwww.lyft.com%2Fdrive%2Freferrals">
+          Learn more</a>
+       </p>
      </div>
-   </article>
+   </div>
+  </header>
 
 
 
-<article class="video">
+<!-- header -->
+ <article class="header">
+   <div id="image">
+    <img src="assets/images/phone.png" width="500" height="500">
+   </div>
+   <div class="text">
+     <h3>A RIDE IN MINUTES</h3><br/>
+     <p>Request a ride and you’ll be on your way in minutes.</p>
+     <p>Request. Ride. Repeat.</p><br/><br/>
 
-<div class="video-text">
-  <a class="more" href="https://take.lyft.com/from-day-one/">LEARN MORE</a>
+     <h3>SERIOUS ABOUT SAFETY</h3><br/>
+     <p>From knowing the color of your driver’s car to our 24/7</p>
+     <p>Trust & Safety Team, we got you.</p><br/><br/>
 
-  <h2><strong>DRIVEN BY YOU<br/>
-    FROM DAY ONE</strong></h2>
+     <h3>HAPPY DRIVERS.</h3>
+     <h3>HAPPY RIDERS.</h3><br/>
+     <p>Ride with us and you’ll see why 9 out of 10 rides end with</p>
+     <p> five stars.</p>
+   </div>
+  </article>
 
-    <p>You work hard to get where you’re<br/>
-      going. We’re here to help you get there.</p>
-</div>
-  <div class="video-1">
+
+<!-- adding videos and text -->
+ <article class="video">
+    <div class="video-text">
+     <a class="more" href="https://take.lyft.com/from-day-one/">LEARN MORE</a>
+     <h2><strong>DRIVEN BY YOU<br/>
+          FROM DAY ONE</strong></h2>
+     <p>You work hard to get where you’re<br/>
+        going. We’re here to help you get there.</p>
+    </div>
+    <div class="video-1">
+     <iframe width="900" height="600"
+      src="https://www.youtube.com/embed/fLSmUWOYpKw"
+      frameborder="0" allowfullscreen></iframe>
+    </div>
+  </article>
+
+ <article class="video">
+    <div id="video-text-2">
+    <p>WATCH</p>
+    <h3><strong>MOON RIDE</strong></h3>
+    <p>Whether you’re landing on the moon or<br/>
+      picking up your hair dryer from your ex’s<br/>
+      place, it matters how you get there.</p>
+   </div>
+   <div class="video-2">
     <iframe width="900" height="600"
-    src="https://www.youtube.com/embed/fLSmUWOYpKw"
-    frameborder="0" allowfullscreen></iframe>
-  </div>
-</article>
+     src="https://www.youtube.com/embed/V7j8Aqxmbs8"
+     frameborder="0" allowfullscreen></iframe>
+   </div>
+ </article>
 
-
-<article class="video">
-
-<div id="video-text-2">
-  <p>WATCH</p>
-
-<h3><strong>MOON RIDE</strong></h3>
-
-<p>Whether you’re landing on the moon or<br/>
-   picking up your hair dryer from your ex’s<br/>
-   place, it matters how you get there.</p>
-
-</div>
-  <div class="video-2">
-    <iframe width="900" height="600"
-    src="https://www.youtube.com/embed/V7j8Aqxmbs8"
-    frameborder="0" allowfullscreen></iframe>
-  </div>
-</article>
-
-
-<article class="video">
+ <article class="video">
   <div class="video-text">
     <a class="more" href="https://www.lyft.com/round-up">LEARN MORE</a>
-
-<h3><strong>ROUND UP & DONATE</strong></h3>
-
-<p>Opt in and we’ll round up each fare to<br/>
-   the nearest dollar, then donate the<br/>
-   difference to a charitable cause of your<br/>
-   choice.</p>
+    <h3><strong>ROUND UP & DONATE</strong></h3>
+    <p>Opt in and we’ll round up each fare to<br/>
+     the nearest dollar, then donate the<br/>
+     difference to a charitable cause of your<br/>
+     choice.</p>
   </div>
   <div class="video-3">
-<iframe width="900" height="600"
-src="https://www.youtube.com/embed/xj2VWLV0xCU"
- frameborder="0" allowfullscreen></iframe>
-</div>
+    <iframe width="900" height="600"
+     src="https://www.youtube.com/embed/xj2VWLV0xCU"
+     frameborder="0" allowfullscreen></iframe>
+  </div>
+ </article>
 
-</article>
+<!-- main -->
+ <article class="main">
+ <span>
+   <p>PRODUCT</p>
+   <h2><strong>NOW LIVE: SCHEDULED RIDES</strong></h2>
+   <p>Now you can schedule Lyft rides up to seven days in advance<br/>
+      and relax knowing your ride will be there when you need it.<br/>
+      Whether you’re catching a flight or a show across town,<br/>
+      you’ll have one less thing to worry about.</p>
+   <a class="learn"
+      href="https://blog.lyft.com/posts/2016/9/12/now-live-scheduled-rides?rq=scheduled%20rides">
+      Learn More
+   </a>
+ </span>
 
-
-<article class="main">
-
-    <span>
-<p>PRODUCT</p>
-
-<h2><strong>NOW LIVE: SCHEDULED RIDES</strong></h2>
-
-<p>Now you can schedule Lyft rides up to seven days in advance<br/>
-   and relax knowing your ride will be there when you need it.<br/>
-   Whether you’re catching a flight or a show across town,<br/>
-   you’ll have one less thing to worry about.</p>
-  <a class="learn"
-  href="https://blog.lyft.com/posts/2016/9/12/now-live-scheduled-rides?rq=scheduled%20rides">
-    Learn More</a>
-</span>
-
-  <span>
-<p>NEWS</p>
-
-<h2><strong>SIT FOR SOMETHING WITH<br/>
+ <span>
+   <p>NEWS</p>
+   <h2><strong>SIT FOR SOMETHING WITH<br/>
        ROUND UP & DONATE</strong></h2>
-
-<p>Starting Monday, May 1, we’re excited to harness the Lyft<br/>
-   community’s potential with our newest program, Round Up &<br/>
-   Donate. Opt in and we’ll round up each fare to the nearest<br/>
-   dollar, then donate the difference to a charitable cause.</p>
-
-<a class="learn-2" href="https://blog.lyft.com/posts/roundup-donate-usoLearn">
- Learn More</a>
-</span>
-
+   <p>Starting Monday, May 1, we’re excited to harness the Lyft<br/>
+      community’s potential with our newest program, Round Up &<br/>
+      Donate. Opt in and we’ll round up each fare to the nearest<br/>
+      dollar, then donate the difference to a charitable cause.</p>
+   <a class="learn-2" href="https://blog.lyft.com/posts/roundup-donate-usoLearn">
+    Learn More
+   </a>
+ </span>
 </article>
 
-
-<article class="foot">
+<!-- foot -->
+ <article class="foot">
   <div class="text-fo">
-
-<h1>FIND LYFT IN YOUR CITY</h1>
-
-<p>Find a City</p><hr width="600px;">
-<a id="serve" href="https://www.lyft.com/airports">See airports we serve</a>
-</div>
+   <h1>FIND LYFT IN YOUR CITY</h1>
+   <p>Find a City</p><hr width="600px;">
+   <a id="serve" href="https://www.lyft.com/airports">See airports we serve</a>
+  </div>
 </article>
 
-
-<footer>
-<div class="column-1">
+<!-- footer -->
+ <footer>
+ <div class="column-1">
   <h4>DRIVE</h4>
   <h4>RIDE</h4>
   <h4>LOG IN</h4>
@@ -199,48 +178,43 @@ src="https://www.youtube.com/embed/xj2VWLV0xCU"
   <p>Free Ride Credits</p>
   <p>Driver Bonus</p>
   <p>Gift Cards</p>
-  </div>
+ </div>
 
-  <div class="column">
-    <h4>PARTNER</h4>
-    <p class="hov">Partnerships</p>
-    <p class="hov">Business</p>
-    <p class="hov">Developers</p>
-    <p class="hov">Events</p>
+ <div class="column">
+  <h4>PARTNER</h4>
+  <p class="hov">Partnerships</p>
+  <p class="hov">Business</p>
+  <p class="hov">Developers</p>
+  <p class="hov">Events</p>
+ </div>
 
-  </div>
+ <div class="column">
+  <h4>LEARN</h4>
+  <p class="hov">Safety</p>
+  <p class="hov">Blog</p>
+  <p class="hov">Press</p>
+  <p class="hov">Careers</p>
+  <p class="hov">Driver Requirements</p>
+  <p class="hov">Driver Earnings</p>
+  <p class="hov">Driving Jobs</p>
+  <p class="hov">Round Up & Donate</p>
+ </div>
 
-  <div class="column">
-    <h4>LEARN</h4>
-    <p class="hov">Safety</p>
-    <p class="hov">Blog</p>
-    <p class="hov">Press</p>
-    <p class="hov">Careers</p>
-    <p class="hov">Driver Requirements</p>
-    <p class="hov">Driver Earnings</p>
-    <p class="hov">Driving Jobs</p>
-    <p class="hov">Round Up & Donate</p>
+ <div class="column-img">
+  <img src="assets/images/google-play.png" alt="google" width="150" height="60"><br/>
+   <br/>
+  <img src="assets/images/microsoft.png" alt="google" width="150" height="60">
+ </div>
 
-  </div>
-
-  <div class="column-img">
-    <img src="assets/images/google-play.png" alt="google" width="150" height="60"><br/>
-    <br/>
-    <img src="assets/images/microsoft.png" alt="google" width="150" height="60">
-  </div>
-
-  <div id="end">
-    <i class="fa fa-twitter" aria-hidden="true"></i>
-    <i class="fa fa-facebook" aria-hidden="true"></i>
-    <i class="fa fa-instagram" aria-hidden="true"></i>
-    <hr width="500px;">
-    <center><p>© 2017 Lyft,Inc.
-    <a class="link">Terms</a> <a class="link"> Privacy</a></center></p>
-
-  </div>
-
+ <div id="end">
+  <i class="fa fa-twitter" aria-hidden="true"></i>
+  <i class="fa fa-facebook" aria-hidden="true"></i>
+  <i class="fa fa-instagram" aria-hidden="true"></i>
+  <hr width="500px;">
+  <center><p>© 2017 Lyft,Inc.
+  <a class="link">Terms</a> <a class="link"> Privacy</a></center></p>
+ </div>
 </footer>
-
 
   </body>
 </html>
